added cls and w+ added

--- a/src/app/main/main.temp.html
+++ b/src/app/main/main.temp.html
@@ -85,7 +85,7 @@
 			 </div>
 		</div>
 	</section>
-<div style="position:absolute; top:0; left:50; right: 0; bottom: 0; height:100%; width:100%; z-index: 5; background-color:rgba(225, 225, 225, 0.5);" ng-show="activated">
+<div class="loadercontainer" ng-show="activated">
 	<section class="loadercls">
 		<md-progress-circular md-diameter="100" md-mode='indeterminate'></md-progress-circular>	
 	</section>
