--- a/src/app/main/main.temp.html
+++ b/src/app/main/main.temp.html
@@ -85,8 +85,4 @@
 			 </div>
 		</div>
 	</section>
-<div class="loadercontainer" ng-show="activated">
-	<section class="loadercls">
-		<md-progress-circular md-diameter="100" md-mode='indeterminate'></md-progress-circular>	
-	</section>
-</div>
+	<loadingbar isvisible="activated"></loadingbar>
