--- a/src/assets/css/mainstyle.css
+++ b/src/assets/css/mainstyle.css
@@ -47,7 +47,7 @@ canvas {border: 1px solid #999;}
 #jcl-demo .custom-container{margin: 0;}
 .toolbarMng button i{padding-top: 9px;}
 md-input-container textarea.md-input{ min-height: 90px !important; border:1px solid #ddd;}
-#jcl-demo .carousel{width: 100% !important;}
+/*#jcl-demo .carousel{width: 100% !important;}*/
 md-toast.md-success-toast-theme .md-toast-content{
     background-color: green;
 }
