canvas size + save json format

--- a/src/app/main/main.temp.html
+++ b/src/app/main/main.temp.html
@@ -55,7 +55,7 @@
 		</div>
 		<md-content flex layout-padding layout="row" md-component-id="center" layout-fill layout-align="top center">
 			<div class="canvasHolder">
-			<canvas id="canvasid" width="450" height="471">  </canvas>
+			<canvas id="canvasid"></canvas>
 				<div id="jcl-demo" class="cntr canvasonImage">
 					<div class="custom-container widget">
 					    <div class="mid">
