--- a/src/assets/css/mainstyle.css
+++ b/src/assets/css/mainstyle.css
@@ -39,7 +39,7 @@
 #jcl-demo a.prev, #jcl-demo a.next, #jcl-demo a.go, .jcl-demo a.prev, .jcl-demo a.next{font-size: 24px; padding: 5px; width: 28px;}
 .toggle-editor{display: none;}
 /*#jcl-demo{margin: 0 auto;}*/
-#jcl-demo .mid{margin: 0;width: 450px;height: 471px;}
+#jcl-demo .mid{margin: 0; width: auto; height: 80vh;}
 canvas {border: 1px solid #999;}
 .carousel{max-width: 90%;padding: 0 !important; margin: 0 auto; float: none; float: left !important;}
 .canvasHolder{margin: 0 auto;}
@@ -59,4 +59,7 @@ md-toast.md-error-toast-theme .md-toast-content{
 }
 .loadercls{
     position:absolute; top:50%; left:50%; height:50px; width:100px; margin-top:-25px; margin-left:-50px;
+}
+#jcl-demo .widget img{
+    width: auto;
 }
