--- a/src/assets/css/mainstyle.css
+++ b/src/assets/css/mainstyle.css
@@ -63,4 +63,4 @@ md-toast.md-error-toast-theme .md-toast-content{
 #jcl-demo .widget img{
     width: auto;
 }
-canvas{display: block; overflow: hidden;}
+canvas{display: block; overflow: hidden; border: none;}
