--- a/src/app/main/main.temp.html
+++ b/src/app/main/main.temp.html
@@ -64,7 +64,7 @@
 						</md-input-container>
 					</md-list>
 					<div>
-						<md-button class="md-raised md-primary" ng-click="saveRegion()">Save</md-button>
+						<md-button class="md-raised md-primary" ng-disabled="regionForm.$invalid" ng-click="saveRegion()">Save</md-button>
 						<md-button class="md-raised md-primary" ng-click="cancelReset()">Cancel</md-button>
 					</div>
 				</md-content>
