--- a/src/app/main/main.temp.html
+++ b/src/app/main/main.temp.html
@@ -100,7 +100,7 @@
 			    </div>
 			    <div layout="column" layout-align="center center" class="sm-padding">
 			    	<span id="right">
-			    		<button ng-disabled="increment > storedImageResources.length" ng-style="(increment > storedImageResources.length)?{'background-color':'#ddd'}:{'background-color':'#31b0d5'}" class="next fa fa-arrow-circle-o-right" style="background-color:#31b0d5; color:#fff; font-size:40px; padding: 3px 10px; border-radius: 3px; border:none;" ng-click="nextthumb()">
+			    		<button ng-disabled="increment > storedImageResources.length" ng-style="(increment >= storedImageResources.length)?{'background-color':'#ddd'}:{'background-color':'#31b0d5'}" class="next fa fa-arrow-circle-o-right" style="background-color:#31b0d5; color:#fff; font-size:40px; padding: 3px 10px; border-radius: 3px; border:none;" ng-click="nextthumb()">
 			    		</button>
 			    	</span>
 			  	</div>
