--- a/src/app/main/main.temp.html
+++ b/src/app/main/main.temp.html
@@ -76,7 +76,7 @@
 				<div id="jcl-demo" class="cntr canvasonImage">
 					<div class="custom-container widget">
 					    <div class="mid">
-					        <img ng-src="{{ imgpath }}" alt="1" elresize>
+					        <img ng-src="{{ imgpath }}" img-preload class="fade">
 					    </div>
 					</div>
 				</div>
@@ -84,23 +84,25 @@
 		</md-content>
 	</section>
 	<section class="bottom-bar" draggable>
-		<div id="jcl-demo1" layout="column" layout-padding sm-component-id="center" layout-fill layout-align="bottom center">
-			<div class="widget1" layout="row">
+		<div layout="column" sm-component-id="center" layout-fill layout-align="bottom center">
+			<div layout="row">
 				<div layout="column" layout-align="center center" class="sm-padding">
-			   	 <span id="left">
-			   	 	<button ng-disabled="initialval<=0" ng-style="(initialval <= 0)?{'background-color':'#ddd'}:{'background-color':'#31b0d5'}" class="prev fa fa-arrow-circle-o-left" style="background-color:#31b0d5; color:#fff; font-size:40px; padding: 3px 10px; border-radius: 3px; border:none;" ng-click="previousthumb()">
+			   	 <span>
+			   	 	<button ng-disabled="initialval<=0" ng-style="(initialval <= 0)?{'background-color':'#ddd'}:{'background-color':'#31b0d5'}" class="prev fa fa-arrow-circle-o-left" ng-click="previousthumb()">
 			   	 	</button>
 			   	 </span>
 			  </div>
 				
-			    <div class="carousel_1" angular-lazy-load threshold="200" layout="column" layout-align="center start" layout-padding flex>
-			        <ul style="background-color:#fff; border:1px solid #ddd;">
-				        <li style="float:left; padding:5px; list-style:none; cursor:pointer;" ng-repeat="imgs in regionsimages" data-pageid="page{{ imgs.imageid }}" ng-click="loadregion(imgs.imageid)"><img ng-src="{{ imgs.img }}" img-preload class="fade" style="height:40px; width:40px;"></li>
+			    <div layout="column" layout-align="center start" layout-padding flex>
+			        <ul class="ulcls">
+				        <li class="listclass" ng-repeat="imgs in regionsimages" data-pageid="page{{ imgs.imageid }}" ng-click="loadregion(imgs.imageid)">
+				        	<img ng-src="{{ imgs.img }}" img-preload class="fade" style="height:40px; width:40px;"
+				        </li>
 			        </ul>
 			    </div>
 			    <div layout="column" layout-align="center center" class="sm-padding">
-			    	<span id="right">
-			    		<button ng-disabled="increment > storedImageResources.length" ng-style="(increment >= storedImageResources.length)?{'background-color':'#ddd'}:{'background-color':'#31b0d5'}" class="next fa fa-arrow-circle-o-right" style="background-color:#31b0d5; color:#fff; font-size:40px; padding: 3px 10px; border-radius: 3px; border:none;" ng-click="nextthumb()">
+			    	<span>
+			    		<button ng-disabled="increment > storedImageResources.length" ng-style="(increment >= storedImageResources.length)?{'background-color':'#ddd'}:{'background-color':'#31b0d5'}" class="next fa fa-arrow-circle-o-right" ng-click="nextthumb()">
 			    		</button>
 			    	</span>
 			  	</div>
