--- a/src/assets/css/mainstyle.css
+++ b/src/assets/css/mainstyle.css
@@ -36,14 +36,13 @@
     right: 0;
     display: table;
 }
-.prev{float: left;}
-.next{float: left !important;}
+.prev{float: left; background-color:#31b0d5; color:#fff; font-size:40px; padding: 3px 10px; border-radius: 3px; border:none;}
+.next{float: left !important; background-color:#31b0d5; color:#fff; font-size:40px; padding: 3px 10px; border-radius: 3px; border:none;}
 #jcl-demo a.prev, #jcl-demo a.next, #jcl-demo a.go, .jcl-demo a.prev, .jcl-demo a.next{font-size: 24px; padding: 5px; width: 28px;}
 .toggle-editor{display: none;}
 /*#jcl-demo{margin: 0 auto;}*/
-#jcl-demo .mid{margin: 0; width: auto; height: 80vh;}
-canvas {border: 1px solid #999;}
-.carousel{max-width: 90%;padding: 0 !important; margin: 0 auto; float: none; float: left !important;}
+#jcl-demo .mid{margin: 0; width: inherit; height: 70vh; box-sizing: content-box;}
+.carousel{max-width: 90%; padding: 0 !important; margin: 0 auto; float: none; float: left !important;}
 .canvasHolder{margin: 0 auto;}
 .canvasHolder .canvas-container{position: absolute !important;}
 #jcl-demo .custom-container{margin: 0;}
@@ -63,7 +62,13 @@ md-toast.md-error-toast-theme .md-toast-content{
     position:absolute; top:50%; left:50%; height:50px; width:100px; margin-top:-25px; margin-left:-50px;
 }
 #jcl-demo .widget img{
-    width: auto;
+    width: inherit; box-sizing: content-box;
 }
-canvas{display: block; overflow: hidden; border: none;}
+canvas{display: block; overflow: hidden;}
 .md-input-container{margin:10px 0px!important; }
+.ulcls{
+    background-color:#fff; border:1px solid #ddd;
+}
+.listclass{
+    float:left; padding:5px; list-style:none; cursor:pointer;
+}
