--- a/src/assets/css/mainstyle.css
+++ b/src/assets/css/mainstyle.css
@@ -10,8 +10,8 @@
 	margin: 20px 5px;
     background-color: #fff;
     border-radius: 3px;
-    border: none;
-    position: fixed;
+    border: 1px solid #cdcdcd;
+    position: absolute;
     width: 280px;
     left: 58px;
     top: 70px;
