--- a/src/app/main/main.temp.html
+++ b/src/app/main/main.temp.html
@@ -13,7 +13,10 @@
 <!-- Center big thumbnails  -->
 <section layout="row" flex layout-padding>
 	<md-content flex layout-padding layout="row" md-component-id="center" layout-fill layout-align="top center">
-		<div class="canvasHolder">
+		<div layout="column">
+			<button type="button" class="fa fa-arrow-circle-o-left" ng-click="previousRegion(filename)"></button>
+		</div>
+		<div class="canvasHolder" layout="column">
 			<canvas id="canvasid" width="433" height="542"> </canvas>
 			<div id="jcl-demo" class="cntr canvasonImage">
 				<div class="custom-container widget">
@@ -22,6 +25,9 @@
 					</div>
 				</div>
 			</div>
+		</div>
+		<div layout="column">
+			<button type="button" class="fa fa-arrow-circle-o-right" ng-click="nextRegion(filename)"></button>
 		</div>
 	</md-content>
 </section>
