--- a/src/app/main/main.temp.html
+++ b/src/app/main/main.temp.html
@@ -14,7 +14,7 @@
 <section layout="row" flex layout-padding>
 	<md-content flex layout-padding layout="row" md-component-id="center" layout-fill layout-align="top center">
 		<div layout="column">
-			<button type="button" class="fa fa-arrow-circle-o-left" ng-click="previousRegion(filename)"></button>
+			<button type="button" class="fa fa-arrow-circle-o-left buttonArrowStyle" ng-click="previousRegion(filename)"></button>
 		</div>
 		<div class="canvasHolder" layout="column">
 			<canvas id="canvasid" width="433" height="542"> </canvas>
@@ -27,7 +27,7 @@
 			</div>
 		</div>
 		<div layout="column">
-			<button type="button" class="fa fa-arrow-circle-o-right" ng-click="nextRegion(filename)"></button>
+			<button type="button" class="fa fa-arrow-circle-o-right buttonArrowStyle" ng-click="nextRegion(filename)"></button>
 		</div>
 	</md-content>
 </section>
