issue fixed save resize

--- a/src/app/main/main.temp.html
+++ b/src/app/main/main.temp.html
@@ -46,7 +46,7 @@
 			<div layout="column" layout-align="center start" layout-padding flex>
 				<ul class="ulcls">
 					<li class="listclass" ng-repeat="imgs in regionsimages" data-pageid="page{{ imgs.imageid }}" ng-click="loadregion(imgs.imageid)">
-						<img ng-src="{{ imgs.img }}" img-preload class="fade" style="height:40px; width:40px;"
+						<img ng-src="{{ imgs.img }}" img-preload class="fade" style="height:40px; width:40px;">
 					</li>
 				</ul>
 			</div>
