--- a/src/app/main/main.temp.html
+++ b/src/app/main/main.temp.html
@@ -77,7 +77,7 @@
 		<form name="regionForm">
 			<md-content>
 				<md-list>
-					<md-input-container class="md-block" ng-if="regiontypeLabel =='internal' || regiontypeLabel =='website' || regiontypeLabel =='iframe'">
+					<md-input-container class="md-block" ng-if="regiontypeLabel =='internal' || regiontypeLabel =='iframe'">
 						<label>{{ elementlabel }}</label>
 						<input name="target" type="text" ng-model="region.target" required aria-label="true" ng-keyup="keyPressFunc(region.target)">
 						<div ng-messages="regionForm.target.$error" role="alert">
@@ -85,6 +85,13 @@
 						</div>
 					</md-input-container>
 
+					<md-input-container class="md-block" ng-if="regiontypeLabel =='website'">
+						<label>{{ elementlabel }}</label>
+						<input name="target" type="url" ng-model="region.target" required aria-label="true" ng-keyup="keyPressFunc(region.target)" ng-pattern="/^(?:(?:https?|ftp):\/\/)(?:\S+(?::\S*)?@)?(?:(?!10(?:\.\d{1,3}){3})(?!127(?:\.\d{1,3}){3})(?!169\.254(?:\.\d{1,3}){2})(?!192\.168(?:\.\d{1,3}){2})(?!172\.(?:1[6-9]|2\d|3[0-1])(?:\.\d{1,3}){2})(?:[1-9]\d?|1\d\d|2[01]\d|22[0-3])(?:\.(?:1?\d{1,2}|2[0-4]\d|25[0-5])){2}(?:\.(?:[1-9]\d?|1\d\d|2[0-4]\d|25[0-4]))|(?:(?:[a-z\u00a1-\uffff0-9]+-?)*[a-z\u00a1-\uffff0-9]+)(?:\.(?:[a-z\u00a1-\uffff0-9]+-?)*[a-z\u00a1-\uffff0-9]+)*(?:\.(?:[a-z\u00a1-\uffff]{2,})))(?::\d{2,5})?(?:\/[^\s]*)?$/i">
+						<div ng-messages="regionForm.target.$error" role="alert">
+							<div ng-message-exp="['required', 'pattern']">Invalid website url.</div>
+						</div>
+					</md-input-container>
 					<md-input-container class="md-block" ng-if="regiontypeLabel =='phone'">
 						<label>{{ elementlabel }}</label>
 						<input name="target" type="phone" ng-model="region.target" required aria-label="true" ng-keyup="keyPressFunc(region.target)" minlength="10" maxlength="10" ng-pattern="/^[0-9]{10}$/">
