--- a/src/app/main/main.temp.html
+++ b/src/app/main/main.temp.html
@@ -77,7 +77,7 @@
 		<form name="regionForm">
 			<md-content>
 				<md-list>
-					<md-input-container class="md-block" ng-if="regiontypeLabel =='internal' || regiontypeLabel =='iframe'">
+					<md-input-container class="md-block" ng-if="regiontypeLabel =='internal' || regiontypeLabel =='phone' || regiontypeLabel =='iframe'">
 						<label>{{ elementlabel }}</label>
 						<input name="target" type="text" ng-model="region.target" required aria-label="true" ng-keyup="keyPressFunc(region.target)">
 						<div ng-messages="regionForm.target.$error" role="alert">
@@ -92,7 +92,7 @@
 							<div ng-message-exp="['required', 'pattern']">Invalid website url.</div>
 						</div>
 					</md-input-container>
-					<md-input-container class="md-block" ng-if="regiontypeLabel =='phone'">
+					<md-input-container class="md-block" ng-if="regiontypeLabel =='picture'">
 						<label>{{ elementlabel }}</label>
 						<input name="target" type="phone" ng-model="region.target" required aria-label="true" ng-keyup="keyPressFunc(region.target)" minlength="10" maxlength="10" ng-pattern="/^[0-9]{10}$/">
 						<div ng-messages="regionForm.target.$error" role="alert">
