--- a/src/app/main/main.temp.html
+++ b/src/app/main/main.temp.html
@@ -17,7 +17,7 @@
 			<button type="button" class="fa fa-arrow-circle-o-left buttonArrowStyle" ng-click="previousRegion(filename)"></button>
 		</div>
 		<div class="canvasHolder" layout="column">
-			<canvas id="canvasid" width="433" height="542" style="width:100%;height:100%"> </canvas>
+			<canvas id="canvasid" width="433" height="542" style="width:100%;height:100%;"> </canvas>
 			<div id="jcl-demo" class="cntr canvasonImage">
 				<div class="custom-container widget">
 					<div class="mid">
